# FoodFresh

./: README.md  techstack.md  techstack.yml
sys-doc/conference/: bibliography.bib  chainfresh-heterogeneous_blockchain_consortium_for_a_food_supply_chain_network.tcp  chainfresh-heterogeneous_blockchain_consortium_for_a_food_supply_chain_network.tex
sys-src/evaluation/: xcm.py
sys-src/frontend/: .gitignore  package.json
sys-src/frontend/public/: index.html
sys-src/frontend/src/: App.js  index.scss
sys-src/frontend/src/components/: AccountSelector.js  ListTable.js  ListWarning.js  OrganizationSelector.js  TopNavMenu.js
sys-src/frontend/src/hooks/: index.js  useBestBlockNumber.js  useDocuments.js  useInitialAddress.js  useNodeInfo.js  useOrganization.js  useOrganizations.js  useProducts.js  useRoles.js  useShipment.js
sys-src/frontend/src/utils/: Accounts.js
sys-src/frontend/src/views/dashboard/: index.js
sys-src/frontend/src/views/dashboard/components/: BlockNumber.js  NodeInfo.js
sys-src/frontend/src/views/document/: index.js
sys-src/frontend/src/views/document/components/: DocumentList.js  Documents.js  RegisterDocumentForm.js
sys-src/frontend/src/views/member/: index.js
sys-src/frontend/src/views/member/components/: AddAdministrator.js  AssignRevokeRole.js  CreateRole.js  Members.js
sys-src/frontend/src/views/organization/: index.js
sys-src/frontend/src/views/organization/components/: AddToOrganization.js  CreateOrganization.js  Organizations.js
sys-src/frontend/src/views/product/: index.js
sys-src/frontend/src/views/product/components/: ProductList.js  Products.js  RegisterProductForm.js
sys-src/frontend/src/views/shipment/: index.js
sys-src/frontend/src/views/shipment/components/: RegisterShipmentForm.js  ShipmentList.js  Shipments.js
sys-src/frontend/src/views/skeletons/: DashboardSkeleton.js  DefaultSkeleton.js  TopNavMenuSkeleton.js
sys-src/frontend/src/views/trace/: index.js
sys-src/frontend/src/views/trace/components/: ShipmentDetails.js  ShipmentOperations.js  ShipmentSelector.js  Traces.js
sys-src/multichain/parachain-collator/pallets/document-registry/: Cargo.toml  types.json
sys-src/multichain/parachain-collator/pallets/document-registry/src/: lib.rs  mock.rs  tests.rs
sys-src/multichain/parachain-collator/pallets/product-registry/: Cargo.toml
sys-src/multichain/parachain-collator/pallets/product-registry/src/: lib.rs  mock.rs  tests.rs
sys-src/multichain/parachain-collator/pallets/product-tracking/: Cargo.toml
sys-src/multichain/parachain-collator/pallets/product-tracking/src/: builders.rs  lib.rs  mock.rs
sys-src/multichain/parachain-collator/runtime/: Cargo.toml
sys-src/multichain/parachain-collator/runtime/src/: lib.rs
sys-src/offchain/: ocw.py
sys-src/solochain/frontend/: .gitignore  package.json
sys-src/solochain/frontend/public/: manifest.json
sys-src/solochain/frontend/src/: App.js  index.js  index.scss
sys-src/solochain/frontend/src/components/: AccountSelector.js  AddAdministrator.js  AddDocument.js  AddToOrganization.js  AssignRevokeRole.js  BlockNumber.js  CreateOrganization.js  CreateRole.js  DocumentList.js  Documents.js  ListTable.js  ListWarning.js  Members.js  NodeInfo.js  OrganizationSelector.js  Organizations.js  ProductList.js  Products.js  RegisterDocumentForm.js  RegisterProductForm.js  RegisterShipmentForm.js  ShipmentDetails.js  ShipmentList.js  ShipmentOperations.js  ShipmentSelection.js  Shipments.js  TopNavMenu.js  Trace.js  Tracking.js  index.js
sys-src/solochain/frontend/src/config/: common.json
sys-src/solochain/frontend/src/hooks/: index.js  useBestBlockNumber.js  useDocuments.js  useInitialAddress.js  useOrganization.js  useRoles.js
sys-src/solochain/frontend/src/substrate-lib/components/: TxButton.js
sys-src/solochain/frontend/src/views/: Dashboard.js  Document.js  Member.js  Organization.js  Product.js  Shipment.js  Tracking.js
sys-src/solochain/frontend/src/views/dashboard/: index.js
sys-src/solochain/frontend/src/views/dashboard/components/: BlockNumber.js  NodeInfo.js
sys-src/solochain/frontend/src/views/document/: index.js
sys-src/solochain/frontend/src/views/document/components/: DocumentList.js  Documents.js  RegisterDocumentForm.js
sys-src/solochain/frontend/src/views/member/: index.js
sys-src/solochain/frontend/src/views/member/components/: AddAdministrator.js  AssignRevokeRole.js  CreateRole.js
sys-src/solochain/frontend/src/views/organization/: index.js
sys-src/solochain/frontend/src/views/organization/components/: AddToOrganization.js  CreateOrganization.js  Organizations.js
sys-src/solochain/frontend/src/views/product/: index.js
sys-src/solochain/frontend/src/views/product/components/: ProductList.js  Products.js  RegisterProductForm.js
sys-src/solochain/frontend/src/views/shipment/: index.js
sys-src/solochain/frontend/src/views/shipment/components/: RegisterShipmentForm.js  ShipmentList.js  Shipments.js
sys-src/solochain/frontend/src/views/skeletons/: DashboardSkeleton.js  DefaultSkeleton.js  TopNavMenuSkeleton.js
sys-src/solochain/frontend/src/views/trace/: index.js
sys-src/solochain/frontend/src/views/trace/components/: ShipmentDetails.js  ShipmentOperations.js  ShipmentSelection.js  Traces.js
sys-src/solochain/scripts/init/: init.py  requirements.txt
sys-src/solochain/scripts/ocw/: ocw.py
