[package]
name = 'chainfresh-parachain-runtime'
description = 'A Cumulus FRAME-based Parachain Runtime.'
license = 'Unlicense'
version = '3.0.0'
edition = '2018'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive']}
log = { version = "0.4.14", default-features = false }
serde = { version = '1.0.119', optional = true, features = ['derive'] }

# Local Dependencies
pallet-did = { default_features = false, version = '2.0.0', git = 'https://github.com/substrate-developer-hub/pallet-did' }

[dependencies.product-registry]
default-features = false
package = 'pallet-product-registry'
path = '../pallets/product-registry'
version = '2.0.0'

[dependencies.product-tracking]
default-features = false
package = 'pallet-product-tracking'
path = '../pallets/product-tracking'
version = '2.0.0'

[dependencies.document-registry]
default-features = false
package = 'pallet-document-registry'
path = '../pallets/document-registry'
version = '2.0.0'

[dependencies.rbac]
default-features = false
git = 'https://github.com/gautamdhameja/substrate-rbac'
package = 'substrate-rbac'
branch = 'enterprise-sample'

[dependencies.registrar]
default-features = false
package = 'pallet-registrar'
path = '../pallets/registrar'
version = '2.0.0'

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-offchain = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-session = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-version = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }

## Substrate FRAME Dependencies
frame-executive = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false, optional = true }
frame-support = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.8' }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false, optional = true }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }

## Substrate Pallet Dependencies
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
pallet-sudo = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }

# Cumulus Dependencies
cumulus-pallet-aura-ext = { git = 'https://github.com/imstar15/cumulus', branch = 'polkadot-v0.9.8', default-features = false }
cumulus-pallet-parachain-system = { git = 'https://github.com/imstar15/cumulus', branch = 'polkadot-v0.9.8', default-features = false }
cumulus-pallet-dmp-queue = { git = 'https://github.com/imstar15/cumulus', branch = 'polkadot-v0.9.8', default-features = false }
cumulus-pallet-xcm = { git = 'https://github.com/imstar15/cumulus', branch = 'polkadot-v0.9.8', default-features = false }
cumulus-pallet-xcmp-queue = { git = 'https://github.com/imstar15/cumulus', branch = 'polkadot-v0.9.8', default-features = false }
cumulus-primitives-core = { git = 'https://github.com/imstar15/cumulus', branch = 'polkadot-v0.9.8', default-features = false }
cumulus-primitives-timestamp = { git = 'https://github.com/imstar15/cumulus', branch = 'polkadot-v0.9.8', default-features = false }
cumulus-primitives-utility = { git = 'https://github.com/imstar15/cumulus', branch = 'polkadot-v0.9.8', default-features = false }
parachain-info = { git = 'https://github.com/imstar15/cumulus', branch = 'polkadot-v0.9.8', default-features = false }

# Polkadot Dependencies
polkadot-parachain = { git = 'https://github.com/imstar15/polkadot', branch = 'release-v0.9.8', default-features = false }
xcm = { git = 'https://github.com/imstar15/polkadot', branch = 'release-v0.9.8', default-features = false }
xcm-builder = { git = 'https://github.com/imstar15/polkadot', branch = 'release-v0.9.8', default-features = false }
xcm-executor = { git = 'https://github.com/imstar15/polkadot', branch = 'release-v0.9.8', default-features = false }
pallet-xcm = { git = 'https://github.com/imstar15/polkadot', branch = 'release-v0.9.8', default-features = false }

# Custom Dependencies
cumulus-ping = { git = 'https://github.com/imstar15/cumulus', branch = 'polkadot-v0.9.8', default-features = false }

[features]
default = ['std']
runtime-benchmarks = [
	'sp-runtime/runtime-benchmarks',
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks'
]
std = [
	"codec/std",
	"serde",
	"log/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
	"parachain-info/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-pallet-xcm/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"pallet-aura/std",
	"sp-consensus-aura/std",
	'pallet-did/std',
	'product-registry/std',
	'product-tracking/std',
	'document-registry/std',
	'rbac/std',
	'registrar/std'
]
